<resources>
    <string name="app_name">CourierService</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open nav drawer</string>
    <string name="drawer_close">Close nav drawer</string>
    <string name="emergency_charge">(+) Emergency Situation Surcharge @25%</string>
    <string name="cgst">(+) CGST @9%</string>
    <string name="sgst">(+) SGST @9%</string>
    <string name="round_off">Round Off </string>
    <string name="bill_amount">Bill Amount</string>


    <string-array name="company">
        <item>Select company</item>
        <item>abc</item>
        <item>xyz</item>
    </string-array>
    <string-array name="zone">
        <item>Select Zone</item>
        <item>abc</item>
        <item>xyz</item>
    </string-array>

    <string-array name="package_type">
        <item>Select Package Type</item>
        <item>Document</item>
        <item>Non Document</item>
    </string-array>

</resources>
