<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ServiceBill"
        android:background="@drawable/bg_splash">
        <include layout="@layout/layout_toolbar"
            android:id="@+id/toolbar" />
        <androidx.core.widget.NestedScrollView
            android:layout_below="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Company"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/segoe_ui"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_5sdp"
                    android:background="@drawable/editbox_bg"
                    android:textSize="@dimen/_12sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/segoe_ui"
                    android:textColor="@color/colorBlack"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Abc"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/segoe_ui"
                    android:textColor="@color/colorBlack"/>
                <View
                    android:layout_marginTop="@dimen/_5sdp"
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_3sdp"
                    android:background="@color/colorDarkBlue"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Xyz"
                    android:layout_gravity="right"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/segoe_ui"
                    android:textColor="@color/colorBlack"/>

            </LinearLayout>
                <RelativeLayout
                    android:paddingBottom="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginTop="@dimen/_20sdp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total"
                        android:paddingStart="3dp"
                        android:textSize="@dimen/_15sdp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/segoe_ui"
                        android:textColor="@color/colorBlack"/>
                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="756656.57"
                        android:layout_alignParentEnd="true"
                        android:textSize="@dimen/_13sdp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/segoe_ui"
                        android:textColor="@color/colorBlack"/>
                    <TextView
                        android:id="@+id/emergency_charge"
                        android:layout_below="@+id/total"
                        android:layout_width="@dimen/_160sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/emergency_charge"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginTop="10dp"
                        android:paddingStart="@dimen/_3sdp"
                        android:fontFamily="@font/segoe_ui"
                        android:textColor="@color/colorBlack"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="756656.57"
                        android:id="@+id/emergency_charge_value"
                        android:layout_below="@id/total"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/segoe_ui"
                        android:textColor="@color/colorBlack"/>
                    <TextView

                        android:layout_below="@+id/emergency_charge"
                        android:layout_width="@dimen/_130sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/cgst"
                        android:textSize="@dimen/_12sdp"
                        android:paddingStart="@dimen/_3sdp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/segoe_ui"
                        android:textColor="@color/colorBlack"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="756656.57"
                        android:id="@+id/cgst_value"
                        android:layout_below="@id/emergency_charge"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/segoe_ui"
                        android:textColor="@color/colorBlack"/>
                    <TextView

                        android:layout_below="@+id/cgst_value"
                        android:layout_width="@dimen/_130sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/sgst"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginTop="10dp"
                        android:paddingStart="@dimen/_3sdp"
                        android:fontFamily="@font/segoe_ui"
                        android:textColor="@color/colorBlack"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="756656.57"
                        android:id="@+id/sgst_value"
                        android:layout_below="@id/cgst_value"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/segoe_ui"
                        android:textColor="@color/colorBlack"/>
                    <TextView

                        android:layout_below="@+id/sgst_value"
                        android:layout_width="@dimen/_130sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/round_off"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginTop="10dp"
                        android:paddingStart="@dimen/_3sdp"
                        android:fontFamily="@font/segoe_ui"
                        android:textColor="@color/colorBlack"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="756656.57"
                        android:id="@+id/round_off_value"
                        android:layout_below="@id/sgst_value"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/segoe_ui"
                        android:textColor="@color/colorBlack"/>

                    <TextView

                        android:layout_below="@+id/round_off_value"
                        android:layout_width="@dimen/_130sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/bill_amount"
                        android:textSize="@dimen/_15sdp"
                        android:paddingStart="@dimen/_3sdp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/segoe_ui"
                        android:textColor="@color/colorBlack"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="756656.57"
                        android:id="@+id/bill_amount_value"
                        android:layout_below="@id/round_off_value"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:textSize="@dimen/_15sdp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/segoe_ui"
                        android:textColor="@color/colorBlack"/>

                </RelativeLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:text="Done"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="@dimen/_12sdp"
                    android:id="@+id/btn_save"/>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</layout>